<resources>
    <string name="textcontactCare">Please contact Customer Care <font fgcolor="#FC3E52"><b><u><a>support@theskygo.com</a></u></b></font></string>
    <string name="app_name">The SkyGo</string>
    <string name="welcome_to_gtt">Welcome to The SkyGo </string>
    <string name="default_notification_channel_id">gttAppNotificationChannel</string>
    <string name="textDashboard">Dashboard</string>
    <string name="facebook_app_id">680846345699872</string>
    <string name="textYouareHere">You are here</string>
    <string name="textHereisLocation">Here is Location</string>
    <string name="textActivateSIM">Activate SIM</string>
    <string name="textActivateyourSIMnumber">Activate your SIM number </string>
    <string name="textRecentActivationOnMobile">Recent Activation on Mobile#</string>
    <string name="textAlltypebooking">All type booking available soon !!</string>
    <string name="textFlights">Flights</string>
    <string name="textUber">UBER</string>
    <string name="textFoodDelivery">Food Delivery</string>
    <string name="textHotels">Hotels</string>
    <string name="textMovie">Movie</string>
    <string name="textTrain">Train Tickets</string>
    <string name="textGooglePay">Google Play</string>
    <string name="textMore">More</string>
    <string name="textSIMSerialNo">SIM Number</string>
    <string name="textDate">Date</string>
    <string name="textNoOfDays">No. of days</string>
    <string name="textCurrentAmnt">Current Amount</string>
    <string name="textMobileNumber">Mobile Number</string>
    <string name="textBuyNow">Buy Now</string>
    <string name="textSomeOutstandingFeatures">Some Outstanding Features</string>
    <string name="texthintSIMNumber">SIM Number</string>
    <string name="textLanguage">Language</string>
    <string name="textSelectyourapplanguage">Select your app language</string>
    <string name="textNEXT">NEXT</string>
    <string name="textPaymentSummary">Payment Summary</string>
    <string name="texthinthereisnumber">here is number</string>
    <string name="texthintAmount">Amount</string>
    <string name="textCartAmount">Cart Amount</string>
    <string name="textConvenienceFee">Convenience Fee</string>
    <string name="textAmountPayable">Amount Payable</string>
    <string name="textActivationDetails">Activation Details</string>
    <string name="textValiditydays">Validity days - </string>
    <string name="textActivationfromdate">Activation from date - </string>
    <string name="textMODIFY">MODIFY</string>
    <string name="textProceed">Proceed</string>
    <string name="textYourOrderwasSuccessfullyProccessed">Your Order was Successfully Proccessed</string>
    <string name="textBACKTOHOME">BACK TO HOME</string>
    <string name="textLoading">Loading..</string>
    <string name="textAnd">And</string>
    <string name="textbackToDashboardButton">back To Dashboard Button</string>
    <string name="textComingSoon">Coming Soon</string>
    <string name="textUnderConstruction">Under Construction</string>
    <string name="textSigninwithyoursocialnetwork">Sign in</string>
    <string name="textWewillneverlogintoFacebookGoogleorLinkedInwithoutyourpermission">We will never login to Facebook, Google email or any other email Account without your Permission</string>
    <string name="textNotifications">Notifications</string>
    <string name="texthotspotButton">hotspotButton</string>
    <string name="textRecharge">Recharge</string>
    <string name="textSIMHash">MSISDN number</string>
    <string name="textValiditydate">Validity date</string>
    <string name="textAvailableSoon">Available Soon</string>
    <string name="textVoiceoverIPVoIP">Voice over IP (VoIP)</string>
    <string name="textPayment">Payment</string>
    <string name="textHereisno">Here is number</string>
    <string name="textDeliverPhone">Deliver Phone</string>
    <string name="textcallmessages">call messages</string>
    <string name="textProcessPending">Process Pending</string>
    <string name="textSorrySomethingwentwrong">Sorry! Something went wrong</string>
    <string name="textPleaseCheckYourInternetConnection">Please Check Your Internet Connection</string>
    <string name="textLocationPermissionNotEnabled">Location Permission Not Enabled</string>
    <string name="textStatusPending">Status : Pending</string>
    <string name="textStatusUnderProcessing">Status : Under Processing</string>
    <string name="textFor">For</string>
    <string name="textClickBACKagaintoExit">Click BACK again to Exit</string>
    <string name="textPleaseEnterSIMSerialNumber">Please Enter SIM Number</string>
    <string name="textInvalidNumberOfDay">Invalid Number Of Day</string>
    <string name="textInvalidSerialNumber">Invalid SIM Number</string>
    <string name="textPleaseEnterValidNumberOfDays">Please Enter Valid Number Of Days</string>
    <string name="textValidity">Validity</string>
    <string name="textto">to</string>
    <string name="textLoginSuccessful">Login Successful</string>
    <string name="textLogincancel">Login cancel</string>
    <string name="textLogincancelerror">Login cancel error</string>
    <string name="textInvalid">Invalid</string>
    <string name="textCancel">Cancel</string>
    <string name="textGPSisnotenabled">GPS is not enabled</string>
    <string name="textifyoucancelyourappwillbeclosed">if you cancel your app will be closed</string>
    <string name="textThisappneedsLocationpermissions">This app needs Location permissions.</string>
    <string name="textNeedMultiplePermission">Need Multiple Permission</string>
    <string name="textGrant">Grant</string>
    <string name="textThisappneedsCameraandLocationpermissions">This app needs Camera and Location permissions.</string>
    <string name="textGotoPermissionstoGrantCameraandLocation">Go to Permissions to Grant Camera and Location</string>
    <string name="textPleaseLoginagain">Please Login again</string>
    <string name="textOpensettings">Open Setting</string>
    <string name="textNOInternetConnection">No Internet Connection</string>
    <string name="textTabTheSetpHotspot">Tap the \"Set up Wi-Fi hotspot\"</string>
    <string name="textOK">OK</string>
    <string name="textyes">Yes</string>
    <string name="textno">No</string>
    <string name="textextendvalidity">Extend Validity</string>
    <string name="textyourmobilenumber">Your Mobile Number</string>
    <string name="textAlreadyhaveanaccount">Already have an account? <font fgcolor="#442EB4"><b><u>Login here</u></b></font> </string>
    <string name="textDisclaimerDisclaimerOnlyavailabletopickdropatLAXIceCurrencyLocations">Disclaimer :Only available to pick/drop at LAX Ice Currency Locations</string>
    <string name="textDonothaveanaccount">Don\'t have an account? <font fgcolor="#442EB4"><b><u>Sign up</u></b></font> </string>

    <!--    updated by vaibhav-->
    <string name="textAddCall">Add Call</string>
    <string name="textVideoCall">Video Call</string>
    <string name="textAVerificationLinkHasBeenSendTo">A verification link has been send to</string>
    <string name="textCreateAnAccount">Create an account</string>
    <string name="textLogin">Login</string>
    <string name="textPassword">Password</string>
    <string name="textConfirmPassword">Confirm Password</string>
    <string name="textDisclaimerOnlyAvailableToPickDropAtLAXIceCurrencyLocations">Disclaimer :Only available to pick/drop at LAX Ice Currency Locations</string>
    <string name="textDialer">Dialer</string>
    <string name="textActivateNow">Activate Now</string>
    <string name="textSelectYourAppLanguage">Select your app language</string>
    <string name="textSIM">SIM#</string>
    <string name="textPay">Pay</string>
    <string name="textVersion">Version</string>
    <string name="textCalling">Calling…</string>
    <string name="textUnknownName">Unknown Name</string>
    <string name="textSpeaker">Speaker</string>
    <string name="textHold">Hold</string>
    <string name="textMute">Mute</string>
    <string name="textAvailableBalance">Available balance</string>
    <string name="textAddTOPUPBalance">Add TOP-UP(Balance)</string>
    <string name="textCheckCountryWisePrice">Check Country Wise Price</string>
    <string name="textRecentCallLoading">Recent Call loading…</string>
    <string name="textSendOneTimePassword">Send One Time Password</string>
    <string name="textPhoneNumber">Phone number</string>
    <string name="textName">Name</string>
    <string name="textOneTimePasswordOTP">One Time Password(OTP)</string>
    <string name="textAmountChargeTopup">Amount Charge (Top-up):</string>
    <string name="textSelectStartDate">Select Start Date</string>
    <string name="textContactLoading">Contact loading…</string>
    <string name="textEmail">Email</string>
    <string name="textBalance">Balance</string>
    <string name="textPrice">Price</string>
    <string name="textExtensionFromDate">Extension From Date</string>
    <string name="textVoipPlanDetail">Voip Plan Detail</string>
    <string name="textYourTopUpofDollarX">Your TopUp of </string>
    <string name="textIsSuccessfulAndYourCurrentBalanceisDoolarX">is successful and your current balance is</string>
    <string name="textCallduration">Call duration</string>
    <string name="textMobile">Mobile</string>
    <string name="textWaitingForPickTheCall">Waiting for Pick the Call</string>
    <string name="textRinging">Ringing</string>
    <string name="textMinute">Minute</string>
    <string name="textVoipAccountCreated">Voip Account Created</string>
    <string name="textEnterNumberValidNumber">Enter Number/Valid Number</string>
    <string name="textPleaseEnter6DigitsOTP">Please Enter 6 Digits OTP</string>
    <string name="textVerificationOTPsendSuccesfully">Verification OTP send Successfully</string>
    <string name="textInvalidCode">Invalid Code</string>
    <string name="textPleaseEnterValidAmount">Please enter valid amount</string>
    <string name="textEnterValidPhoneNumber">Enter valid Phone Number</string>
    <string name="textEmailPasswordIsEmpty">E-mail/Password is Empty</string>
    <string name="textYourEmailisNotVerified">Your Email is not Verified</string>
    <string name="textConnectionErrorPleaseTryAgain">Connection Error! Please Try Again</string>
    <string name="textEmailpasswordisInvalid">Email/password is invalid</string>
    <string name="textAuthenticationCancle">Authentication Cancle</string>
    <string name="textFillAlldetails">Fill All details</string>
    <string name="textPasswordTooShort">Password too short</string>
    <string name="textPasswordNotmatch">Password Not match</string>
    <string name="textPhoneNumberOptional">Phone number (optional)</string>
    <string name="textHomeCountry">Home Country</string>
    <string name="textPleaseCheckYourEmailForOrderConfirmation">Please check your email for order confirmation</string>
    <string name="textOrderNumber">Order Number:</string>
    <string name="textReviewYourOrder">Review your order</string>
    <string name="textProfile">Profile</string>
    <string name="textStatement">Statement</string>
    <string name="textInviteFriend">Invite Friend</string>
    <string name="textRateUs">Rate Us</string>
    <string name="textFeedback">Feedback</string>
    <string name="textCustomerService">Customer Service</string>
    <string name="textLogout">Logout</string>
    <string name="textTransaction">Transaction</string>


</resources>