<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.activities.ComingSoon">

    <!--dashboard screen-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/shadow"
        android:weightSum="12">

        <ImageView
            android:id="@+id/button12"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="backToDashboardButton"
            android:padding="16dp"
            android:src="@drawable/arrowwhite" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="145dp"
            android:layout_height="53dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="10"
            android:fontFamily="@font/segoe_bold"
            android:gravity="center"
            android:text="@string/textComingSoon"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/notificationButton"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:onClick="notificationButton"
            android:padding="1dp"
            android:src="@drawable/notification1" />




    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/annoucement" />

        <TextView
            android:id="@+id/comingSoonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/imageView8"
            android:fontFamily="@font/segoe"
            android:text="@string/textAlltypebooking"
            android:textColor="#333232"
            android:textSize="16dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <!--other-->


            <ImageView
                android:id="@+id/comingSoonImage"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"


                app:srcCompat="@drawable/comingsoon" />

            <TextView
                android:id="@+id/comingSoonText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comingSoonImage"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/segoe"
                android:gravity="center"
                android:text="@string/textSomeOutstandingFeatures"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/comingSoontext2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comingSoonText1"

                android:layout_centerHorizontal="true"
                android:fontFamily="@font/segoe_bold"
                android:gravity="center"
                android:text="@string/textComingSoon"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comingSoontext3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comingSoontext2"
                android:layout_centerHorizontal="true"

                android:fontFamily="@font/segoe"
                android:gravity="center"
                android:text="@string/textAnd"
                android:textSize="22dp" />


            <TextView
                android:id="@+id/comingSoontext4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comingSoontext3"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/segoe"
                android:gravity="center"
                android:text="@string/textUnderConstruction"
                android:textSize="22dp"

                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>