<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeToSkyGO"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/segoe_font_family"
                android:text="@string/welcome_to_gtt"
                android:textColor="#000000"
                android:textSize="32dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_below="@+id/welcomeToSkyGO"
                android:fontFamily="@font/segoe_font_family"
                android:text="@string/textSigninwithyoursocialnetwork"
                android:textColor="#707070" />
        </RelativeLayout>



        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="50dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="309dp"
                android:layout_height="66dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/facebookCustom"
                android:layout_width="309dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:background="@drawable/facebook"
                android:onClick="FacebookLoginButtton" />
        </FrameLayout>


        <ImageView
            android:id="@+id/google_sign_in_button"
            android:layout_width="309dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/google"
            android:onClick="GmailLoginButton" />

        <ImageView
            android:id="@+id/ownemail_sign_in_button"
            android:layout_width="309dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/emaillogin"
            android:onClick="ownEmailLoginButton" />

        <ImageView
            android:id="@+id/linkedin_button"
            android:layout_width="309dp"
            android:layout_height="66dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:background="@drawable/linkedin" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayLogin"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/segoe_font_family"
            android:text="@string/textWewillneverlogintoFacebookGoogleorLinkedInwithoutyourpermission"
            android:textColor="#707070" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>